logs/dag_id=rand_user/run_id=manual__2023-11-23T05:39:34.674809+00:00/task_id=create_destinatin_table/attempt=1.log
[2023-11-23T05:41:50.124+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.create_destinatin_table manual__2023-11-23T05:39:34.674809+00:00 [queued]>
[2023-11-23T05:41:50.140+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.create_destinatin_table manual__2023-11-23T05:39:34.674809+00:00 [queued]>
[2023-11-23T05:41:50.140+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-23T05:41:50.141+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 3
[2023-11-23T05:41:50.142+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-23T05:41:50.160+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_destinatin_table> on 2023-11-23 05:39:34.674809+00:00
[2023-11-23T05:41:50.166+0000] {standard_task_runner.py:55} INFO - Started process 4568 to run task
[2023-11-23T05:41:50.171+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'rand_user', 'create_destinatin_table', 'manual__2023-11-23T05:39:34.674809+00:00', '--job-id', '409', '--raw', '--subdir', 'DAGS_FOLDER/predictions.py', '--cfg-path', '/tmp/tmpxpxarjer']
[2023-11-23T05:41:50.173+0000] {standard_task_runner.py:83} INFO - Job 409: Subtask create_destinatin_table
[2023-11-23T05:41:50.257+0000] {task_command.py:376} INFO - Running <TaskInstance: rand_user.create_destinatin_table manual__2023-11-23T05:39:34.674809+00:00 [running]> on host f71f95879a41
[2023-11-23T05:41:50.347+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gaurav
AIRFLOW_CTX_DAG_ID=rand_user
AIRFLOW_CTX_TASK_ID=create_destinatin_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-23T05:39:34.674809+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-23T05:39:34.674809+00:00
[2023-11-23T05:41:50.358+0000] {base.py:71} INFO - Using connection ID 'dest_conn_id' for task execution.
[2023-11-23T05:41:50.366+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS rand_dest_users (
        uuid TEXT NOT NULL,
        title TEXT NOT NULL,
        firstname TEXT NOT NULL,
        lastname TEXT NOT NULL,
        gender TEXT NOT NULL,
        country TEXT NOT NULL,
        username TEXT NOT NULL,
        password TEXT NOT NULL,
        email TEXT NOT NULL,
        age INT NOT NULL,
        )
        , parameters: None
[2023-11-23T05:41:50.411+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 13:         )
                 ^

[2023-11-23T05:41:50.420+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=rand_user, task_id=create_destinatin_table, execution_date=20231123T053934, start_date=20231123T054150, end_date=20231123T054150
[2023-11-23T05:41:50.435+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 409 for task create_destinatin_table (syntax error at or near ")"
LINE 13:         )
                 ^
; 4568)
[2023-11-23T05:41:50.462+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-23T05:41:50.489+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
